tests/specs/type_literal_mapped_type.txt
# mod.ts
export type T<Type> = { readonly [P in keyof Type as NewType]: Type[P]; }

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type T<Type> = { readonly [P in keyof Type as NewType]: Type[P]; }
  | ^

# output.txt
Defined in file:///mod.ts:0:1

type T<Type> = readonly [P in keyof Type as NewType]: Type[P]


# output.json
{
  "symbols": [
    {
      "name": "T",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "typeAlias",
          "def": {
            "tsType": {
              "kind": "mapped",
              "value": {
                "readonly": true,
                "typeParam": {
                  "name": "P",
                  "constraint": {
                    "kind": "typeOperator",
                    "value": {
                      "operator": "keyof",
                      "tsType": {
                        "repr": "Type",
                        "kind": "typeRef",
                        "value": {
                          "typeName": "Type",
                          "resolution": {
                            "kind": "typeParam",
                            "declaringName": "T",
                            "declaringKind": "typeAlias"
                          }
                        }
                      }
                    }
                  }
                },
                "nameType": {
                  "repr": "NewType",
                  "kind": "typeRef",
                  "value": {
                    "typeName": "NewType"
                  }
                },
                "tsType": {
                  "kind": "indexedAccess",
                  "value": {
                    "objType": {
                      "repr": "Type",
                      "kind": "typeRef",
                      "value": {
                        "typeName": "Type",
                        "resolution": {
                          "kind": "typeParam",
                          "declaringName": "T",
                          "declaringKind": "typeAlias"
                        }
                      }
                    },
                    "indexType": {
                      "repr": "P",
                      "kind": "typeRef",
                      "value": {
                        "typeName": "P",
                        "resolution": {
                          "kind": "typeParam"
                        }
                      }
                    }
                  }
                }
              }
            },
            "typeParams": [
              {
                "name": "Type"
              }
            ]
          }
        }
      ]
    }
  ]
}
